--- a/NASAPictures/app/src/main/AndroidManifest.xml
+++ b/NASAPictures/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.nasapictures">
 
     <application
+        android:name=".init.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
