--- a/NASAPictures/app/build.gradle
+++ b/NASAPictures/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Glide for Images
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
