--- a/NASAPictures/app/build.gradle
+++ b/NASAPictures/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
     // Glide for Images
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.+'
