--- a/NASAPictures/app/build.gradle
+++ b/NASAPictures/app/build.gradle
@@ -32,12 +32,10 @@ android {
         jvmTarget = '1.8'
     }
 
-    viewBinding {
-        enabled = true
-    }
+    buildFeatures {
+        viewBinding = true
 
-    dataBinding {
-        enabled = true
+        dataBinding = true
     }
 }
 
@@ -61,6 +59,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     testImplementation 'androidx.test.ext:junit-ktx:1.1.2'
