--- a/NASAPictures/app/build.gradle
+++ b/NASAPictures/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation "androidx.room:room-runtime:2.2.6"
+    kapt "androidx.room:room-compiler:2.2.6"
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
