--- a/NASAPictures/app/build.gradle
+++ b/NASAPictures/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation "androidx.room:room-runtime:2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
     kapt "androidx.room:room-compiler:2.2.6"
 
     testImplementation 'junit:junit:4.13.2'
